# MathLib

./: CMakeLists.txt
libsources/: CMakeLists.txt  MathLib.cpp  MathLib.h
libsources/MathFunctions/: CMakeLists.txt  MathFunctions.cpp  MathFunctions.h
libsources/Vector/: CMakeLists.txt  Vector.cpp  Vector.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h
sources/: main.cpp
tests/: CMakeLists.txt
tests/sources/: MathFunctionsTest.cpp  VectorTest.cpp
